<resources>
    <string name="app_name">Tabemane</string>
    <string name="action_string1">設定</string>
    <string name="action_string2">ログアウト</string>
    <string name="saledate">特売日</string>
    <string name="quest">アンケート</string>
    <string name="realsale">リアルタイムセール</string>
    <string name="suirt">スイーツ</string>
    <!--レシピ遷移画面-->
    <string name="search">じゃがいも　にんじん</string>
    <string name="recipe_name">家庭料理の定番！肉じゃが</string>
    <string name="material">
        ～材料(４人前)～\n\n牛もも肉(薄切り)…300g\nじゃがいも…4個\nにんじん…1本\n玉ねぎ…1個\n
        砂糖…大さじ3\nしょうゆ…大さじ3\n酒…大さじ3\nみりん…大さじ3\n水…500ml
    </string>
    <string name="recipe_make">
        ～手順～\n\n
        準備．  じゃがいもとにんじんの皮をむいておく。\n
        （１）  じゃがいもとにんじんは食べやすい大きさに切ります。\n
        （２）  玉ねぎはくし切り、続いて牛もも肉を食べやすい大きさに切ります。\n
        （３）  中火で熱した鍋にサラダ油を入れ、肉と玉ねぎを炒めます。\n
        （４）  火が通ってきたら、にんじんとじゃがいもを入れ軽く炒めます。\n
        （５）  水を入れ、煮ながら、アクをとります。\n
        （６）  砂糖・酒を入れひと煮立ちさせたら、醤油を入れます。\n
        （７）  味が染みてきたら一旦火を止め冷まします。\n
        （８）  冷めたら再度火をかけ、みりんを入れます。煮汁が少なくなるまで中火で煮たら完成です。\n
    </string>
    <string name="msg_complete">完了</string>
    <string name="movingimg01">動画1</string>
    <string name="movingimg02">動画2</string>
    <string name="movingimg03">動画3</string>
    <string name="movingimg04">動画4</string>
    <string name="prompt_id">ユーザーID</string>
    <string name="prompt_password">パスワード</string>
    <string name="action_sign_in_short">ログイン</string>
    <string name="action_sign_in">ログイン</string>
    <string-array name="Spinner_items">
        <item>-選択-</item>
        <item>5日前</item>
        <item>4日前</item>
        <item>3日前</item>
        <item>2日前</item>
        <item>前日</item>
        <item>当日</item>
    </string-array>
</resources>