<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Recipe02Activity">

    <!--共通フレームここから-->

    <!--ver2-->
    <!--toolbar-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="496dp"
        android:background="@color/gray"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--ver2ここまで-->

    <!--店舗-->
    <ImageButton
        android:id="@+id/shopImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="330dp"
        android:layout_marginLeft="330dp"
        android:layout_marginBottom="8dp"
        android:background="@color/black"
        app:srcCompat="@drawable/shopimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <!--ホーム-->
    <ImageButton
        android:id="@+id/homeImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black"
        android:src="@drawable/homeimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--フード-->
    <ImageButton
        android:id="@+id/foodImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginBottom="8dp"
        android:background="@color/black"
        android:src="@drawable/foodimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--レシピ-->
    <ImageButton
        android:id="@+id/recipeImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginLeft="170dp"
        android:layout_marginBottom="8dp"
        android:background="@color/black"
        android:src="@drawable/recipeimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--クーポン-->
    <ImageButton
        android:id="@+id/couponImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginLeft="250dp"
        android:layout_marginBottom="8dp"
        android:background="@color/black"
        android:src="@drawable/couponimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--共通フレームここまで-->

    <!--検索欄-->
    <SearchView
        android:id="@+id/serch"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:background="#F3F1F1"
        app:layout_constraintBottom_toTopOf="@+id/recipeImageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.082" />


    <!--スクロールバー-->
    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:isScrollContainer="false"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessLeaf"/>
    </ScrollView>

    <!--レシピ-->
    <TextView
        android:id="@+id/recipe_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="240dp"
        android:text="@string/recipe_name"
        app:layout_constraintBottom_toTopOf="@+id/recipeImageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serch"
        app:layout_constraintVertical_bias="0.301" />

    <ImageView
        android:id="@+id/recipe_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_name"
        app:srcCompat="@drawable/nikujagaimage" />

    <TextView
        android:id="@+id/material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/material"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_img" />

    <TextView
        android:id="@+id/Howtomake_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginLeft="128dp"
        android:layout_marginEnd="128dp"
        android:layout_marginRight="128dp"
        android:text="@string/recipe_make"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/material" />


    <!--完了（レシピ作った）ボタン-->
    <Switch
        android:id="@+id/make_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="12dp"
        android:text="@string/msg_complete"
        app:layout_constraintBottom_toTopOf="@+id/shopImageButton"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints,UseSwitchCompatOrMaterialXml" />


</androidx.constraintlayout.widget.ConstraintLayout>