<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--共通フレームここから-->

    <!--ver2-->
    <!--toolbar-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="496dp"
        android:background="@color/gray"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/quest_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--ver2ここまで-->

    <!--店舗-->
    <ImageButton
        android:id="@+id/shopImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="330dp"
        android:layout_marginLeft="330dp"
        android:layout_marginBottom="8dp"
        android:background="@color/black"
        app:srcCompat="@drawable/shopimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <!--ホーム-->
    <ImageButton
        android:id="@+id/homeImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black"
        android:src="@drawable/homeimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--フード-->
    <ImageButton
        android:id="@+id/foodImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginBottom="8dp"
        android:background="@color/black"
        android:src="@drawable/foodimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--レシピ-->
    <ImageButton
        android:id="@+id/recipeImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginLeft="170dp"
        android:layout_marginBottom="8dp"
        android:background="@color/black"
        android:src="@drawable/recipeimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--クーポン-->
    <ImageButton
        android:id="@+id/couponImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginLeft="250dp"
        android:layout_marginBottom="8dp"
        android:background="@color/black"
        android:src="@drawable/couponimage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--共通フレームここまで-->


    <!--page別フレームはここから下に記述-->
    <TextView
        android:id="@+id/point_TextView"
        android:layout_width="160dp"
        android:layout_height="29dp"
        android:layout_marginTop="8dp"
        android:text="ポイント 846P"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.293" />

    <Button
        android:id="@+id/sale_button"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="95dp"
        android:layout_marginEnd="95dp"
        android:layout_marginRight="95dp"
        android:layout_marginBottom="40dp"
        android:text="@string/saledate"
        app:layout_constraintBottom_toTopOf="@+id/realsale_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/quest_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="95dp"
        android:layout_marginEnd="95dp"
        android:layout_marginRight="95dp"
        android:layout_marginBottom="91dp"
        android:text="@string/quest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/realsale_button"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="95dp"
        android:layout_marginEnd="95dp"
        android:layout_marginRight="95dp"
        android:layout_marginBottom="40dp"
        android:text="@string/realsale"
        app:layout_constraintBottom_toTopOf="@+id/quest_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <!--ImageView-->
    <ImageView
        android:id="@+id/barcode_ImageView"
        android:layout_width="match_parent"
        android:layout_height="151dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:src="@drawable/barcodeimage"
        app:layout_constraintBottom_toTopOf="@+id/point_TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>